name:                testbed
version:             1.0.0
description:         Libvirt helper for creating arbitrary network topologies
license:             ISC
license-file:        LICENSE
author:              Ruslan Babayev
maintainer:          ruslan@babayev.com
copyright:           Ruslan Babayev
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable testbed
  main-is:             Main.hs
  other-modules:       Paths_testbed
  build-depends:       base >=4.8 && <5
                     , hxt
                     , libvirt-hs >= 0.2.2
  build-tools:         alex, happy
  default-language:    Haskell2010
